# asgard

./: README.md
cpp_trace_analyzer/: .gitignore  CMakeLists.txt  cache.cpp  cache.hpp  catch.hpp  llc_partitioning.cpp  llc_partitioning.hpp  memory_analyzer.cpp  private_cache.cpp  private_cache.h  statistics_generator.cpp  statistics_generator.hpp  test_catch.cpp
plotting/: data.py  main.py
qemu-tracer/: .gitignore  README.md  (+5 more)
qemu-tracer/WormCache-model_calibration/: .gitignore  Cargo.toml
qemu-tracer/WormCache-model_calibration/spec/: coherence.hs
qemu-tracer/WormCache-model_calibration/src/: lib.rs  main.rs  parameter.rs  qemu_api.rs  util.rs
qemu-tracer/WormCache-model_calibration/src/bp/: mod.rs
qemu-tracer/WormCache-model_calibration/src/cache/: .single.rs.swp  single.rs
qemu-tracer/WormCache-model_calibration/src/components/: mod.rs
qemu-tracer/WormCache-model_calibration/src/components/marker/: mod.rs
qemu-tracer/WormCache-model_calibration/src/components/memory/: mod.rs  mtr.rs  per_core_record.rs  ts_cache.rs  ts_model.rs  ts_set.rs
qemu-tracer/WormCache-model_calibration/src/components/memory/checkpoint/: checkpoint.rs  mod.rs  ts_checkpoint.rs
qemu-tracer/WormCache-model_calibration/src/components/trace/: mod.rs
qemu-tracer/WormCache-model_calibration/src/components/virtual_time/: icount.rs  mod.rs  vtime.rs
qemu-tracer/WormCache-model_calibration/src/mh/: mod.rs  pbb_metadata.rs
qemu-tracer/WormCache-model_calibration/src/plugin/: mod.rs  qemu_wrapper.rs
qemu-tracer/WormCache-model_calibration/tests/: coherence.rs  timer.rs
