[package]
name = "worm_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
lru = "0.9.0"
rand = { version = "0.8.5", feature ="alloc" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18.0"

[lib]
crate-type=["rlib", "cdylib"]

[profile.release]
debug = true

[dev-dependencies]
spinlock = "0.1.2"